Capture mousewheel events in layer control

--- a/components/mapComponents/LayerControl.module.scss
+++ b/components/mapComponents/LayerControl.module.scss
@@ -2,6 +2,7 @@
   background: white;
   font-family: 'Didact Gothic', sans-serif;
   margin-bottom: 26px;
+  overflow-y: auto;
   width: 200px;
 }
 
