--- a/components/mapComponents/LayerControl.module.scss
+++ b/components/mapComponents/LayerControl.module.scss
@@ -1,65 +1,56 @@
 .container {
-  background: white;
+  border: none !important;
+  display: flex;
   font-family: 'Didact Gothic', sans-serif;
   margin-bottom: 26px;
   overflow-y: auto;
-  padding: 5px 20px 5px 10px;
-  width: 300px;
+  position: relative;
+  overflow: hidden;
+  transition: width 0.3s;
+  width: 48px;
+
+  &.open {
+    width: 348px;
+  }
 }
 
-// .section {
-//   padding: 5px 20px 5px 10px;
+.toggle {
+  background: white;
+  background-clip: inherit;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='28' width='40' viewbox='0 0 40 28' stroke-width='2' stroke='white'%3E%3Cpath d='M0,20 L20,12 L40,20 L20,28 Z' fill='%23816C5Bdd' /%3E%3Cpath d='M0,14 L20,6 L40,14 L20,22 Z' fill='%236b93d6dd' /%3E%3Cpath d='M0,8 L20,0 L40,8 L20,16 Z' fill='%239fc164dd' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  border: 2px solid #00000033;
+  border-radius: 4px;
+  box-sizing: content-box;
+  flex-shrink: 0;
+  height: 40px;
+  left: 0px;
+  padding: 0;
+  position: relative;
+  transition: left 0.3s;
+  width: 44px;
 
-//   > summary {
-//     cursor: pointer;
-//     font-size: 16px;
-//     list-style: none;
+  .open > & {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20' viewbox='0 0 40 40' stroke-width='2' stroke='black' stroke-linecap='round'%3E%3Cline x1='10%25' y1='10%25' x2='90%25' y2='90%25' /%3E%3Cline x1='90%25' y1='10%25' x2='10%25' y2='90%25' /%3E%3C/svg%3E%0A");
+    border-radius: 4px 0px 0px 4px;
+    border-right: none;
+    left: 2px;
+  }
+}
 
-//     &::-webkit-details-marker {
-//       display: none;
-//     }
-
-//     &::before {
-//       bottom: 1px;
-//       content: "▶";
-//       display: inline-block;
-//       font-size: 10px;
-//       margin-right: 10px;
-//       position: relative;
-//       text-align: center;
-//       width: 20px;
-//     }
-//   }
-
-//   &[open] > summary::before {
-//     content: "▼";
-//   }
-
-//   ul {
-//     list-style: none;
-//     padding-left: 0;
-
-//     label {
-//       height: 20px;
-//       display: flex;
-      
-//       input[type=checkbox] {
-//         height: 13px;
-//         margin: 4px 13px 4px 4px;
-//         width: 13px;
-//       }
-//     }
-//   }
-
-//   &[disabled=true] {
-//     color: #aaa;
-//     pointer-events: none;
-//   }
-// }
-
-ul.feature-list {
+.layers {
+  background: white;
+  background-clip: inherit;
+  border: 2px solid #00000033;
+  border-radius: 0px 4px 4px 4px;
+  flex-shrink: 0;
   list-style: none;
-  padding-left: 0;
+  margin: 0;
+  overflow: auto;
+  padding: 15px 20px 15px 10px;
+  width: 300px;
 
   label {
     height: 20px;
@@ -72,7 +63,7 @@ ul.feature-list {
     }
   }
 
-  > li {
+  > li.item {
     margin-top: 5px;
 
     &:first-child {
@@ -98,6 +89,11 @@ ul.feature-list {
         margin-top: 1px;
         padding: 0;
         text-decoration: underline;
+        width: 45px;
+
+        &::before {
+          content: "expand";
+        }
       }
     }
 
@@ -118,7 +114,7 @@ ul.feature-list {
     }
 
     .feature {
-      transition: height 3s;
+      transition: height 0.3s;
 
       .feature-header {
         cursor: pointer;
@@ -161,6 +157,10 @@ ul.feature-list {
     &.open {
       hr, ul {
         display: block;
+      }
+
+      .layer-header .features-toggle::before {
+        content: "collapse";
       }
     }
 
