Add new layer control, marker clusters, and a couple other things

--- a/components/mapComponents/LayerControl.module.scss
+++ b/components/mapComponents/LayerControl.module.scss
@@ -1,17 +1,14 @@
 .container {
+  align-items: flex-end;
   border: none !important;
   display: flex;
+  flex-direction: row-reverse;
   font-family: 'Didact Gothic', sans-serif;
   margin-bottom: 26px;
   overflow-y: auto;
   position: relative;
   overflow: hidden;
   transition: width 0.3s;
-  width: 48px;
-
-  &.open {
-    width: 348px;
-  }
 }
 
 .toggle {
@@ -26,7 +23,6 @@
   box-sizing: content-box;
   flex-shrink: 0;
   height: 40px;
-  left: 0px;
   padding: 0;
   position: relative;
   transition: left 0.3s;
@@ -34,9 +30,8 @@
 
   .open > & {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20' viewbox='0 0 40 40' stroke-width='2' stroke='black' stroke-linecap='round'%3E%3Cline x1='10%25' y1='10%25' x2='90%25' y2='90%25' /%3E%3Cline x1='90%25' y1='10%25' x2='10%25' y2='90%25' /%3E%3C/svg%3E%0A");
-    border-radius: 4px 0px 0px 4px;
-    border-right: none;
-    left: 2px;
+    // border-radius: 0px 4px 4px 0px;
+    // border-left: none;
   }
 }
 
@@ -44,13 +39,19 @@
   background: white;
   background-clip: inherit;
   border: 2px solid #00000033;
-  border-radius: 0px 4px 4px 4px;
+  border-radius: 4px;
+  display: flex;
   flex-shrink: 0;
   list-style: none;
   margin: 0;
+  opacity: 0;
   overflow: auto;
-  padding: 15px 20px 15px 10px;
-  width: 300px;
+  padding: 10px 20px 5px;
+  transition: opacity 0.2s;
+
+  .open & {
+    opacity: 1;
+  }
 
   label {
     height: 20px;
@@ -64,111 +65,147 @@
   }
 
   > li.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 5px;
 
-    &:first-child {
-      margin-top: 0;
+    &:not(:first-child) {
+      margin-left: 20px;
     }
 
-    .layer-header {
-      display: flex;
-      justify-content: space-between;
+    .layer-toggle {
+      background-size: contain;
+      background-repeat: no-repeat;
+      border: 2px solid #ddd;
+      border-radius: 8px;
+      height: 60px;
+      width: 60px;
+    }
 
-      label {
-        color: black;
-        font-size: 14px;
+    .layer-label {
+      color: #666;
+      font-size: 10px;
+      line-height: 12px;
+      margin-top: 5px;
+      text-align: center;
+      width: 75px;
+    }
+
+    &.layer-visible {
+      .layer-toggle {
+        border-color: #666;
       }
+
+      .layer-label {
+        color: #444;
+        font-weight: bold;
+      }
+    }
+
+    // &:first-child {
+    //   margin-top: 0;
+    // }
+
+    // .layer-header {
+    //   display: flex;
+    //   justify-content: space-between;
+
+    //   label {
+    //     color: black;
+    //     font-size: 14px;
+    //   }
   
-      .features-toggle {
-        background: none;
-        border: none;
-        color: blue;
-        font-family: 'Roboto', sans-serif;
-        font-size: 12px;
-        margin-left: 30px;
-        margin-top: 1px;
-        padding: 0;
-        text-decoration: underline;
-        width: 45px;
+    //   .features-toggle {
+    //     background: none;
+    //     border: none;
+    //     color: blue;
+    //     font-family: 'Roboto', sans-serif;
+    //     font-size: 12px;
+    //     margin-left: 30px;
+    //     margin-top: 1px;
+    //     padding: 0;
+    //     text-decoration: underline;
+    //     width: 45px;
 
-        &::before {
-          content: "expand";
-        }
-      }
-    }
+    //     &::before {
+    //       content: "expand";
+    //     }
+    //   }
+    // }
 
-    hr {
-      display: none;
-      margin-left: 30px;
-      margin-top: 4px;
-    }
+    // hr {
+    //   display: none;
+    //   margin-left: 30px;
+    //   margin-top: 4px;
+    // }
     
-    ul {
-      color: #444;
-      font-family: 'Roboto', sans-serif;
-      font-size: 12px;
-      list-style: none;
-      margin-bottom: 10px;
-      padding-left: 30px;
-      display: none;
-    }
+    // ul {
+    //   color: #444;
+    //   font-family: 'Roboto', sans-serif;
+    //   font-size: 12px;
+    //   list-style: none;
+    //   margin-bottom: 10px;
+    //   padding-left: 30px;
+    //   display: none;
+    // }
 
-    .feature {
-      transition: height 0.3s;
+    // .feature {
+    //   transition: height 0.3s;
 
-      .feature-header {
-        cursor: pointer;
+    //   .feature-header {
+    //     cursor: pointer;
         
-        &:hover {
-          font-weight: bold;
-          text-decoration: underline;
-        }
-      }
+    //     &:hover {
+    //       font-weight: bold;
+    //       text-decoration: underline;
+    //     }
+    //   }
 
-      .feature-header ~ * {
-        display: none;
-        margin-top: 5px;
-      }
+    //   .feature-header ~ * {
+    //     display: none;
+    //     margin-top: 5px;
+    //   }
 
-      img {
-        width: 100%;
-      }
+    //   img {
+    //     width: 100%;
+    //   }
 
-      .description {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
+    //   .description {
+    //     overflow: hidden;
+    //     text-overflow: ellipsis;
+    //   }
 
-      &.selected {
-        border: 1px solid #444;
-        margin: 5px 0;
-        padding: 5px;
+    //   &.selected {
+    //     border: 1px solid #444;
+    //     margin: 5px 0;
+    //     padding: 5px;
 
-        .feature-header {
-          font-weight: bold;
-        }
+    //     .feature-header {
+    //       font-weight: bold;
+    //     }
 
-        .feature-header ~ * {
-          display: block;
-        }
-      }
-    }
+    //     .feature-header ~ * {
+    //       display: block;
+    //     }
+    //   }
+    // }
 
-    &.open {
-      hr, ul {
-        display: block;
-      }
+    // &.open {
+    //   hr, ul {
+    //     display: block;
+    //   }
 
-      .layer-header .features-toggle::before {
-        content: "collapse";
-      }
-    }
+    //   .layer-header .features-toggle::before {
+    //     content: "collapse";
+    //   }
+    // }
 
-    &:not(.layer-visible) {
-      ul {
-        color: #aaa;
-        pointer-events: none;
-      }
-    }
+    // &:not(.layer-visible) {
+    //   ul {
+    //     color: #aaa;
+    //     pointer-events: none;
+    //   }
+    // }
   }
 }
