--- a/components/mapComponents/FeatureInfoDisplay.module.scss
+++ b/components/mapComponents/FeatureInfoDisplay.module.scss
@@ -45,11 +45,23 @@
     position: relative;
   }
 
+  h2 {
+    color: #444;
+    font-size: 12px;
+    margin: 0;
+    padding: 10px 20px 0px;
+  }
+
   img {
     width: 100%;
   }
 
   p {
-    padding: 10px 20px 10px 40px;
+    margin: 0;
+    padding: 5px 20px 0px 40px;
+
+    &:last-child {
+      margin-bottom: 20px;
+    }
   }
 }
