--- a/components/mapComponents/LayerControl.module.scss
+++ b/components/mapComponents/LayerControl.module.scss
@@ -24,15 +24,27 @@
   flex-shrink: 0;
   height: 40px;
   padding: 0;
-  position: relative;
-  transition: left 0.3s;
+  position: absolute;
+  transition: opacity 0.2s;
   width: 44px;
+  z-index: 1;
 
   .open > & {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20' viewbox='0 0 40 40' stroke-width='2' stroke='black' stroke-linecap='round'%3E%3Cline x1='10%25' y1='10%25' x2='90%25' y2='90%25' /%3E%3Cline x1='90%25' y1='10%25' x2='10%25' y2='90%25' /%3E%3C/svg%3E%0A");
-    // border-radius: 0px 4px 4px 0px;
-    // border-left: none;
+    opacity: 0;
   }
+}
+
+.inner-toggle {
+  background-color: transparent;
+  background-clip: inherit;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20' viewbox='0 0 40 40' stroke-width='2' stroke='black' stroke-linecap='round'%3E%3Cline x1='10%25' y1='10%25' x2='90%25' y2='90%25' /%3E%3Cline x1='90%25' y1='10%25' x2='10%25' y2='90%25' /%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  border: none;
+  box-sizing: content-box;
+  height: 30px;
+  width: 34px;
 }
 
 .layers {
@@ -46,11 +58,14 @@
   margin: 0;
   opacity: 0;
   overflow: auto;
-  padding: 10px 20px 5px;
+  padding: 10px 0px 5px 20px;
+  pointer-events: none;
   transition: opacity 0.2s;
+  z-index: 2;
 
   .open & {
     opacity: 1;
+    pointer-events: all;
   }
 
   label {
