Update map layer orrganization and rendering

--- a/components/mapComponents/LayerControl.module.scss
+++ b/components/mapComponents/LayerControl.module.scss
@@ -134,12 +134,8 @@
   }
 }
 
-.only-expanded {
+.container:not(.expanded) .only-expanded {
   display: none;
-
-  .expanded & {
-    display: block;
-  }
 }
 
 .layers {
